--- a/FireWeb/Content/Site.css
+++ b/FireWeb/Content/Site.css
@@ -111,7 +111,7 @@ box-label{
 
 
 .modal_wrap input {
-    display: none;
+ 
 }
 
 .modal_overlay {
@@ -147,11 +147,19 @@ box-label{
 }
 
 .close_button {
-    position: absolute;
-    top: 14px;
-    right: 16px;
-    font-size: 24px;
-    cursor: pointer;
+    position: relative;
+    display: block;
+    width: 300px;
+    height: 70px;
+    padding: 0.8em;
+    text-align: center;
+    text-anchor:middle;
+    text-decoration: none;
+    color: #fff;
+    background: #EC407A;
+    border: 1px solid #fff;
+    overflow: hidden;
+    margin: 50px 0 auto 80px;
 }
 
 .modal_wrap input:checked ~ .modal_overlay {
