--- a/FireWeb/Views/Home/Login.cshtml
+++ b/FireWeb/Views/Home/Login.cshtml
@@ -4,32 +4,33 @@
     ViewBag.Title = "Login";
 }
 
-<h2>ログイン</h2>
 
 
-@using (Html.BeginForm()) 
+
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
 <div class="form-horizontal">
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-    @using (Html.BeginForm("Post", "Home/Login", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    <div class="col-md-10 col-md-offset-1">
+        <h2>ログイン</h2>
+        @using (Html.BeginForm("Post", "Home/Login", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         <div class="form-group">
-            <h5>ユーザー名</h5>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+            <div class="col-md-10 col-md-offset-1">
+                <h5>ユーザーID</h5>
+                <input class="form-control text-box single-line" id="id" name="id" type="text" value="" style="width:300px">
+                <span class="field-validation-valid text-danger" data-valmsg-for="id" data-valmsg-replace="true"></span>
             </div>
         </div>
 
         <div class="form-group">
-            <h5>パスワード</h5>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+            <div class="col-md-10 col-md-offset-1">
+                <h5>パスワード</h5>
+                <input class="form-control text-box single-line" id="password" name="password" type="text" value="" style="width:300px">
+                <span class="field-validation-valid text-danger" data-valmsg-for="password" data-valmsg-replace="true"></span>
             </div>
         </div>
 
@@ -40,14 +41,15 @@
                 <input type="submit" value="Login" class="btn btn-default" />
             </div>
         </div>
-    }
+}
     </div>
-}
+    </div>
+    }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
