--- a/FireWeb/Views/Home/create.cshtml
+++ b/FireWeb/Views/Home/create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Create";
 }
-
+<div class="col-md-10 col-md-offset-1">
 <h2>新規ユーザー登録</h2>
 
 
@@ -11,68 +11,78 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="form-horizontal">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-
-        <div class="form-group">
-            <h5>ユーザーID<span style="color:#ff0000;display:inline-block;"> * 必須   @ViewBag.userIdMsg</span></h5>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.userId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.userId, "", new { @class = "text-danger" })
-            </div>
-            
+    <h4>ユーザー情報登録</h4>
+    <div class="form-group">
+        <h5>ユーザーID<span style="color:#ff0000;display:inline-block;"> * 必須   </span></h5>
+        <div class="col-md-10">
+            <input class="form-control text-box single-line" id="userId" name="userId" type="text" value="" style="width:300px">
+            <span class="field-validation-valid text-danger" data-valmsg-for="userId" data-valmsg-replace="true"></span>
         </div>
-
-        <div class="form-group">
-            <h5>パスワード<span style="color:#ff0000;display:inline-block;"> * 必須   @ViewBag.passwordMsg</span></h5>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-            </div>
-            
-        </div>
-
-        <div class="form-group">
-            <h5>名前<span style="color:#ff0000;display:inline-block;"></span></h5>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <h5>メールアドレス   @ViewBag.mailMsg</h5>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.mail, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.mail, "", new { @class = "text-danger" })
-            </div>
-            
-        </div>
-
-        <div class="form-group">
-            <h5>備考</h5>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.remark, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.remark, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-                <input type="button" value="Cansel" class="btn btn-default" onclick="location.href='Create'" />
-            </div>
-        </div>
-        <label hidden>
-            @Html.EditorFor(model => model.id, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.id, "", new { @class = "text-danger" })
-        </label>
 
     </div>
-}
 
+    <div class="form-group">
+        <h5>パスワード<span style="color:#ff0000;display:inline-block;"> * 必須   </span></h5>
+        <div class="col-md-10">
+            <input class="form-control text-box single-line" id="password" name="password" type="text" value="" style="width:300px">
+            <span class="field-validation-valid text-danger" data-valmsg-for="password" data-valmsg-replace="true"></span>
+        </div>
+
+    </div>
+
+    <div class="form-group">
+        <h5>名前<span style="color:#ff0000;display:inline-block;"></span></h5>
+        <div class="col-md-10">
+            <input class="form-control text-box single-line" id="name" name="name" type="text" value="" style="width:300px">
+            <span class="field-validation-valid text-danger" data-valmsg-for="name" data-valmsg-replace="true"></span>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <h5>メールアドレス   </h5>
+        <div class="col-md-10">
+            <input class="form-control text-box single-line" id="mail" name="mail" type="text" value="" style="width:300px">
+            <span class="field-validation-valid text-danger" data-valmsg-for="mail" data-valmsg-replace="true"></span>
+        </div>
+
+    </div>
+
+    <div class="form-group">
+        <h5>備考</h5>
+        <div class="col-md-10">
+            <input class="form-control text-box single-line" id="remark" name="remark" type="text" value="" style="width:300px">
+            <span class="field-validation-valid text-danger" data-valmsg-for="remark" data-valmsg-replace="true"></span>
+        </div>
+    </div>
+    <br>
+    <h4>権限設定</h4>
+    <div class="form-group">
+        <h5></h5>
+        <div class="col-md-10">
+            <input id="auth" name="authExhibid" type="checkbox" value="true" style="" checked=""><input name="authExhibid" type="hidden" value="false">出品を許可
+            <input id="auth" name="authBid" type="checkbox" value="true" style="" checked=""><input name="authBid" type="hidden" value="false">入札を許可
+            <input id="auth" name="authRegister" type="checkbox" value="true" style="" checked=""><input name="authRegister" type="hidden" value="false">ユーザー登録を許可
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="button" value="Cansel" class="btn btn-default" onclick="location.href='Create'" />
+        </div>
+    </div>
+    <label hidden>
+        @Html.EditorFor(model => model.id, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.id, "", new { @class = "text-danger" })
+    </label>
+
+</div>
+}
+    </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
