--- a/FireWeb/Views/Auction/Exhibit.cshtml
+++ b/FireWeb/Views/Auction/Exhibit.cshtml
@@ -178,7 +178,7 @@
                 find_img.remove();
             }
 
-            var img = '<div class="img_view"><img alt="" class="img"><p><a href="#" class="img_del">画像を削除する</a></p></div>';
+            var img = '<div class="img_view"><img alt="" class="img" style="height:150px;width:150px"><p><a href="#" class="img_del">画像を削除する</a></p></div>';
 
             view_box.append(img);
 
