--- a/FireWeb/Views/Auction/ItemList.cshtml
+++ b/FireWeb/Views/Auction/ItemList.cshtml
@@ -14,82 +14,86 @@
             <h1 style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;font-size:40px;"><img src="../image/icon.png" style="height:100px;width:100px;margin:30px 20px 60px 100px" />Fire Auction</h1>
         </div>
         @using (Html.BeginForm("ItemList", "Auction", FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-        <div class="row" style="margin-top:80px">
-            <div class="col-md-8 col-md-offset-2" style="height:80px;padding-left:0px">
-                <div class="col-md-3" style="padding-left:0;padding-right:5px">
-                    <select name="column" class="navbar-default" style="height:40px;width:100%"> <option value="all">全て</option><option value="Category">カテゴリー</option><option value="Title">タイトル</option><option value="Name">ユーザー名</option><option value="Detail">詳細</option></select>
-                </div>
-                <div class="col-md-6" style="padding:0;">
-                    <input class="form-control text-box single-line" id="name" name="keyword" type="text" value="@Session["Searchword"]" style="display:inline-block;width:100%;height:40px;font-size:18px">
-                </div>
-                <div class="col-md-1" style="height:40px;padding-left:5px">
-                    <input type="submit" value="Search" class="btn btn-default" style="position:relative;Display:inline-block;height:40px">
-                </div>
-                <div class="col-md-2">
-                    <span onclick="dispOption(0)" class="btnnn">+</span>
-                </div>
-            </div>
-        </div>
-        <div class="row" id="disp" style="display:none">
-            <div class="col-md-8 col-md-offset-2">
-                <label class="control-label col-md-10"><h4>検索条件</h4></label>
-                <div class="col-md-10">
-                    <p style="display:inline-block; width:100px;">
-                        <input type="radio" class="SearchTeam" value="AND" name="searchType" checked><label class="con_label" for="andSearch">AND</label>
-                    </p>
-                    <p style="display:inline-block; width:100px;">
-                        <input type="radio" class="SearchTeam" value="OR" name="searchType"><label for="orSearch" class="con_label">OR</label>
-                    </p>
-                </div>
-                <label class="control-label col-md-10"><h4>ユーザー商品ステータス</h4></label>
-                <div class="col-md-10">
-                    <p style="display:inline-block; width:100px;">
-                        <input type="radio" class="SearchTeam" value="All" name="searchU" checked><label for="andSearch" class="con_label">全て</label>
-                    </p>
-                    <p style="display:inline-block; width:100px;">
-                        <input type="radio" class="SearchTeam" value="Sell" name="searchU"><label for="orSearch" class="con_label">出品済み</label>
-                    </p>
-                    <p style="display:inline-block; width:100px;">
-                        <input type="radio" class="SearchTeam" value="Sold" name="searchU"><label for="orSearch" class="con_label">入札済み</label>
-                    </p>
-                </div>
-                <label class="control-label col-md-10"><h4>商品ステータス</h4></label>
-                <div class="col-md-10">
-                    <input id="SearchStatus" name="SearchStatus" type="checkbox" value="true" style=""><input name="SearchStatus" type="hidden" value="false">出品終了している商品も表示
-                </div>
-                <label class="control-label col-md-10"><h4>ソート条件</h4></label>
-                <div class="col-md-10">
-                    <select name="sortColumn" class="navbar-default" style="height:40px;width:30%;margin-right:30px"> <option value="EndTime">入札締め切り日時</option><option value=" StartTime">出品日時</option><option value="Title">タイトル</option></select>
-                    <p style="display:inline-block; width:100px;">
-                        <input type="radio" class="SearchTeam" value="asc" name="sortType" checked><label class="con_label" for="andSearch">降順</label>
-                    </p>
-                    <p style="display:inline-block; width:100px;">
-                        <input type="radio" class="SearchTeam" value="desc" name="sortType"><label for="orSearch" class="con_label">昇順</label>
-                    </p>
+        {
+            <div class="row" style="margin-top:80px">
+                <div class="col-md-8 col-md-offset-2" style="height:80px;padding-left:0px">
+                    <div class="col-md-3" style="padding-left:0;padding-right:5px">
+                        <select name="column" class="navbar-default" style="height:40px;width:100%"> <option value="all">全て</option><option value="Category">カテゴリー</option><option value="Title">タイトル</option><option value="Name">ユーザー名</option><option value="Detail">詳細</option></select>
+                    </div>
+                    <div class="col-md-6" style="padding:0;">
+                        <input class="form-control text-box single-line" id="name" name="keyword" type="text" value="@Session["Searchword"]" style="display:inline-block;width:100%;height:40px;font-size:18px">
+                    </div>
+                    <div class="col-md-1" style="height:40px;padding-left:5px">
+                        <input type="submit" value="Search" class="btn btn-default" style="position:relative;Display:inline-block;height:40px">
+                    </div>
+                    <div class="col-md-2">
+                        <span onclick="dispOption(0)" class="btnnn">+</span>
+                    </div>
                 </div>
             </div>
-        </div>
-}
+            <div class="row" id="disp" style="display:none">
+                <div class="col-md-8 col-md-offset-2">
+                    <label class="control-label col-md-10"><h4>検索条件</h4></label>
+                    <div class="col-md-10">
+                        <p style="display:inline-block; width:100px;">
+                            <input type="radio" class="SearchTeam" value="AND" name="searchType" checked><label class="con_label" for="andSearch">AND</label>
+                        </p>
+                        <p style="display:inline-block; width:100px;">
+                            <input type="radio" class="SearchTeam" value="OR" name="searchType"><label for="orSearch" class="con_label">OR</label>
+                        </p>
+                    </div>
+                    <label class="control-label col-md-10"><h4>ユーザー商品ステータス</h4></label>
+                    <div class="col-md-10">
+                        <p style="display:inline-block; width:100px;">
+                            <input type="radio" class="SearchTeam" value="All" name="searchU" checked><label for="andSearch" class="con_label">全て</label>
+                        </p>
+                        <p style="display:inline-block; width:100px;">
+                            <input type="radio" class="SearchTeam" value="Sell" name="searchU"><label for="orSearch" class="con_label">出品済み</label>
+                        </p>
+                        <p style="display:inline-block; width:100px;">
+                            <input type="radio" class="SearchTeam" value="Sold" name="searchU"><label for="orSearch" class="con_label">入札済み</label>
+                        </p>
+                    </div>
+                    <label class="control-label col-md-10"><h4>商品ステータス</h4></label>
+                    <div class="col-md-10">
+                        <input id="SearchStatus" name="SearchStatus" type="checkbox" value="true" style=""><input name="SearchStatus" type="hidden" value="false">出品終了している商品も表示
+                    </div>
+                    <label class="control-label col-md-10"><h4>ソート条件</h4></label>
+                    <div class="col-md-10">
+                        <select name="sortColumn" class="navbar-default" style="height:40px;width:30%;margin-right:30px"> <option value="EndTime">入札締め切り日時</option><option value=" StartTime">出品日時</option><option value="Title">タイトル</option></select>
+                        <p style="display:inline-block; width:100px;">
+                            <input type="radio" class="SearchTeam" value="asc" name="sortType" checked><label class="con_label" for="andSearch">降順</label>
+                        </p>
+                        <p style="display:inline-block; width:100px;">
+                            <input type="radio" class="SearchTeam" value="desc" name="sortType"><label for="orSearch" class="con_label">昇順</label>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        }
 
 
         <div style="margin-top:50px;">
             <div class="row">
-                @foreach (var item in Model)
-            {
-                <div class="col-md-3" style="height:500px;width:320px;margin:0">
-                    <div class="AucItem">
-                        <a href="http://localhost:64312/Auction/ItemDetail/@item.Id" style="color:#000;text-decoration:none" />
-                        <img src="@Html.DisplayFor(modelItem => item.PicPath[0])" style="margin:2px;height:290px;width:290px;">
-                        <div class="itemList-info">
-                            <h3 style="height:35px"> @Html.DisplayFor(modelItem => item.Title)</h3>
-                            <h4 style="font-size:15px;margin:10px 0 0 20px">【現在価格】</h4>
-                            <p><span style="font-weight:600;font-size:30px;margin-left:80px;"> @Html.DisplayFor(modelItem => item.NowPrice)</span><span style="font-size:12px">  (税・送料込み)</span><p>
-                                <div style="background-color:#ff9ed4 ; padding-left:20px; font-size:20px">残り <span style="font-weight:600;font-size:30px;padding-left:20px;"> </span></div>
+                @{
+                    var count = 0;
+                    foreach (var item in Model)
+                    {
+                        count += 1;
+                        <div class="col-md-3" style="height:500px;width:320px;margin:0">
+                            <div class="AucItem">
+                                <a href="http://localhost:64312/Auction/ItemDetail/@item.Id" style="color:#000;text-decoration:none" />
+                                <img src="@Html.DisplayFor(modelItem => item.PicPath[0])" style="margin:2px;height:290px;width:290px;">
+                                <div class="itemList-info">
+                                    <h3 style="height:35px"> @Html.DisplayFor(modelItem => item.Title)</h3>
+                                    <h4 style="font-size:15px;margin:10px 0 0 20px">【現在価格】</h4>
+                                    <span style="font-weight:600;font-size:30px;margin-left:80px;"> @Html.DisplayFor(modelItem => item.NowPrice)</span><span style="font-size:12px">  (税・送料込み)</span>
+                                    <div style="background-color:#ff9ed4 ; padding-left:20px; font-size:20px">残り @*<FORM name="tbox_@count"><INPUT name="dspday" type="text" style="border:0px;font-size:38px;width:200px;text-align:center"></FORM>*@</div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-        }
+                    }
+                }
             </div>
         </div>
     </div>
@@ -109,81 +113,60 @@
 
 
 
+<script>
+    function countdown(y, m, d, h, m, s) {
+        year = y
+        mon = m - 2
+        day = d
+        xday = new Date(year, mon, day, h, m, s);
+        nowday = new Date();
+        passtime = xday.getTime() - nowday.getTime();
+        passtime0 = passtime
+
+        cnt_day = Math.floor(passtime / (1000 * 60 * 60 * 24));
+        passtime = passtime - (cnt_day * (1000 * 60 * 60 * 24));
+
+        cnt_hour = Math.floor(passtime / (1000 * 60 * 60));
+        cnt0_hour = Math.floor(passtime0 / (1000 * 60 * 60));
+        passtime = passtime - (cnt_hour * (1000 * 60 * 60));
+
+        cnt_min = Math.floor(passtime / (1000 * 60));
+        passtime = passtime - (cnt_min * (1000 * 60));
+
+        cnt_sec = Math.floor(passtime / 1000);
+        passtime = passtime - (cnt_sec * (1000));
+
+        if (cnt_min < 10) { cnt_min = '0' + cnt_min; }
+        if (cnt_sec < 10) { cnt_sec = '0' + cnt_sec; }
+
+        if ((xday - nowday) >
+            0) {
+            if (cnt_day == 0) {
+                x = cnt0_hour + " : " + cnt_min + " : " + cnt_sec
+            } else {
+                x = cnt_day + " Days "
+            }
+        }
+        else {
+            x = "終了致しました。"
+        }
+        return x
+    }
+</script>
 
 
-@*<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Owner)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Detail)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartPrice)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NowPrice)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SokketsuPrice)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Category)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Value)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Owner)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Detail)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NowPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SokketsuPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Value)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>*@
-
-@*</table>*@
+@*<script type="text/javascript">
+            window.onload = showCountdown();
+            function showCountdown() {
+                @{
+                    count = 0;
+                    foreach (var item in Model)
+                    {
+                        count += 1;
+                        var jas = $"document.tbox_{count}.dspday.value = countdown({item.EndTime.Year},{item.EndTime.Month},{item.EndTime.Day}, {item.EndTime.Hour}, {item.EndTime.Minute}, {item.EndTime.Second});";
+                        @jas
+                    }
+                 }
+              setInterval("showCountdown()", 1000);
+             }
+</script>*@
